[gd_scene load_steps=5 format=2]

[ext_resource path="res://Car/CarRef.png" type="Texture" id=1]
[ext_resource path="res://Car/Car.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.5
height = 13.0

[sub_resource type="CircleShape2D" id=2]
radius = 19.0066

[node name="Car" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 513
collision_mask = 512
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="PlayerInteractArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteractArea"]
modulate = Color( 0.45098, 0.356863, 1, 1 )
shape = SubResource( 2 )

[node name="LabelPosition" type="Position2D" parent="."]
visible = false

[node name="InteractLabel" type="Label" parent="LabelPosition"]
margin_left = -4.0
margin_top = -16.5
margin_right = 11.0
margin_bottom = -2.5
rect_scale = Vector2( 0.5, 0.5 )
text = "[E]"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="PlayerInteractArea" to="." method="_on_PlayerInteractArea_body_entered"]
[connection signal="body_exited" from="PlayerInteractArea" to="." method="_on_PlayerInteractArea_body_exited"]
